--- a/src/blocks/promo-slider/promo_slider.less
+++ b/src/blocks/promo-slider/promo_slider.less
@@ -25,27 +25,92 @@
 	font-size: 18px;
 }
 
-
-.promo-slider__tabs {
+.tabs{
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+.tabs-list {
   padding: 0;
   list-style: none;
 }
-.promo-slider__tabs-item {
+.tabs-link {
   display: inline-block;
   white-space: nowrap;
 }
-.promo-slider__tabs-item a {
+.tabs-link a {
   display: block;
   color: #000;
   text-decoration: none;
   padding: 5px;
 }
-.promo-slider__tabs-item a:hover, .promo-slider__tabs-item.promo-slider__tabs-item--active a {
-  background-color: #ddd;
+.tabs-link a:hover, .tabs-link.active a {
+  color: #ff7435;
+  border-bottom: 2px solid #ff7435;
 }
-.promo-slider__item {
+
+.tab-item {
   display: none;
+  background-image: url(../../img/health.png);
+  background-size: 100% 100%;
+  position: relative;
+  margin-left: 13%;
 }
-.promo-slider__item.promo-slider__tabs-item--active {
+.tab-item.active {
   display: block;
+
+}
+
+.health__item-1{
+	background-image: url(../../img/swimming.png);
+	background-size: 100% 100%;
+	width: 80px;
+	height: 105px;
+	background-repeat: no-repeat;
+	margin: 30px;
+	margin-top: 0px;
+}
+.health__item-2{
+	background-image: url(../../img/football.png);
+	background-size: 100% 100%;
+	width: 80px;
+	height: 105px;
+	background-repeat: no-repeat;
+	margin: 30px;
+	margin-top: 0px;
+}
+.health__item-3{
+	background-image: url(../../img/pool.png);
+	background-size: 100% 100%;
+	width: 80px;
+	height: 105px;
+	background-repeat: no-repeat;
+	margin: 30px;
+	margin-top: 0px;
+}
+.health__item-4{
+	background-image: url(../../img/spa.png);
+	background-size: 100% 100%;
+	width: 80px;
+	height: 105px;
+	background-repeat: no-repeat;
+	margin: 30px;
+	margin-top: 0px;
+}
+.health__item-5{
+	background-image: url(../../img/bath.png);
+	background-size: 100% 100%;
+	width: 80px;
+	height: 105px;
+	background-repeat: no-repeat;
+	margin: 30px;
+	margin-top: 0px;
+}
+.health__item-6{
+	background-image: url(../../img/animation.png);
+	background-size: 100% 100%;
+	width: 80px;
+	height: 105px;
+	background-repeat: no-repeat;
+	margin: 30px;
+	margin-top: 0px;
 }
