--- a/src/less/style.less
+++ b/src/less/style.less
@@ -52,6 +52,9 @@
 @import "../blocks/page-header/page-header.less";
 @import "../blocks/owl-carousel/owl.carousel.less";
 @import "../blocks/promo-slider/promo_slider.less";
+@import "../blocks/gallery/gallery.less";
+@import "../blocks/slick/slick.less";
+@import "../blocks/slick/slick-theme.less";
  .container{
  	border: 1px solid #f44f44;
  }
