--- a/src/less/style.less
+++ b/src/less/style.less
@@ -55,6 +55,8 @@
 @import "../blocks/gallery/gallery.less";
 @import "../blocks/slick/slick.less";
 @import "../blocks/slick/slick-theme.less";
+@import "../blocks/gallery/gallery.less";
+@import "../blocks/fotorama/fotorama.less";
  .container{
  	border: 1px solid #f44f44;
  }
