--- a/src/less/style.less
+++ b/src/less/style.less
@@ -57,6 +57,7 @@
 @import "../blocks/slick/slick-theme.less";
 @import "../blocks/gallery/gallery.less";
 @import "../blocks/fotorama/fotorama.less";
+@import "../blocks/feedbacks/feedbacks.less";
  .container{
  	border: 1px solid #f44f44;
  }
