--- a/src/blocks/feedbacks/feedbacks.less
+++ b/src/blocks/feedbacks/feedbacks.less
@@ -13,12 +13,13 @@
 		margin-bottom: 50px;
 	}
 	&-item{
-		background-color: #ffffff;
-	min-height: 275px;
+		
+	min-height: 300px;
 	width: 480px;
 	margin-left: 50px;
 	overflow: visible !important;
 	position: relative;
+	
     &__img{
     	margin-left: 42%;
     	margin-top: -40px;
@@ -28,6 +29,16 @@
     	z-index: 9;
     	position: absolute;
     	top: 0;
+    &__text{
+    	text-align: center;
+    	width: 60%;
+    }
+
+    }
+    &__inner{
+    	min-height: 275px;
+    	background-color: #ffffff;
+    	margin-top: 40px;
     }
     img{
     	height: 100%;
@@ -37,6 +48,21 @@
 	&__name{
 		padding-top: 50px;
 	}
+	}
+	&__btn{
+		color: #ffffff;
+		text-decoration: none;
+		border: 1px solid #ffffff;
+		border-radius: 25px;
+		padding: 10px;
+		margin-bottom: 20px;
+	}
+	&__btn:hover{
+		color: #ffffff;
+		text-decoration: none;
+		border: 1px solid #ffffff;
+		border-radius: 25px;
+		padding: 10px;
 	}
 }
 // 
