--- a/src/less/style.less
+++ b/src/less/style.less
@@ -58,6 +58,8 @@
 @import "../blocks/gallery/gallery.less";
 @import "../blocks/fotorama/fotorama.less";
 @import "../blocks/feedbacks/feedbacks.less";
+@import "../blocks/special-offer/special-offer.less";
+@import "../blocks/geography/geography.less";
  .container{
  	border: 1px solid #f44f44;
  }
