--- a/src/blocks/owl-carousel/owl.carousel.less
+++ b/src/blocks/owl-carousel/owl.carousel.less
@@ -74,7 +74,7 @@
 }
 .owl-carousel .owl-stage-outer {
   position: relative;
-  overflow: visible;
+  overflow: hidden;
   /* fix for flashing background */
   -webkit-transform: translate3d(0px, 0px, 0px);
 }
