--- a/src/blocks/promo-slider/promo_slider.less
+++ b/src/blocks/promo-slider/promo_slider.less
@@ -1,6 +1,6 @@
 
 .img-slider{
-	margin-left: -15px;
+	
 	width: 100%;
 
 	&__item{
@@ -113,4 +113,7 @@
 	background-repeat: no-repeat;
 	margin: 30px;
 	margin-top: 0px;
+}
+.promo-slider{
+	width: 100%;
 }
