--- a/src/blocks/special-offer/special-offer.less
+++ b/src/blocks/special-offer/special-offer.less
@@ -1,4 +1,10 @@
 .special-offer{
+	margin-top: 50px;
+	&__title{
+		font-size: 30px;
+		text-align: center;
+		padding-bottom: 30px;
+	}
 	&-item{
 		background-image: url(../../img/offersandactions.png);
 		background-size: 100% 100%;
