--- a/src/less/style.less
+++ b/src/less/style.less
@@ -60,6 +60,5 @@
 @import "../blocks/feedbacks/feedbacks.less";
 @import "../blocks/special-offer/special-offer.less";
 @import "../blocks/geography/geography.less";
- .container{
- 	border: 1px solid #f44f44;
- }
+@import "../blocks/offer-choice/offer-choice.less";
+@import "../blocks/page-footer/page-footer.less";
