--- a/src/less/style.less
+++ b/src/less/style.less
@@ -62,3 +62,5 @@
 @import "../blocks/geography/geography.less";
 @import "../blocks/offer-choice/offer-choice.less";
 @import "../blocks/page-footer/page-footer.less";
+@import "../blocks/rooms-promo/rooms-promo.less";
+@import "../blocks/rooms/rooms.less";
