--- a/src/blocks/page-header/page-header.less
+++ b/src/blocks/page-header/page-header.less
@@ -7,6 +7,12 @@
 .main-nav{
  &__link{
  	color: #000;
+ 	text-decoration: none;
+ }
+ &__link:hover{
+ 	color: #ff7435;
+ 	text-decoration: none;
+ 	border-bottom: 1px solid #ff7435;
  }
  &__list{
  	padding-top: 18px;
