--- a/src/blocks/rooms/rooms.less
+++ b/src/blocks/rooms/rooms.less
@@ -25,11 +25,12 @@
 			display: inline-block;
 			padding: 0 20px 0 20px;
 			background-color: #fafafa;
-
+			vertical-align: middle;
 		}
 		&__right-side{
 			width: 48%;
 			display: inline-block;
+			vertical-align: middle;
 		}
 		&__img{
 			width: 100%;
@@ -43,7 +44,7 @@
 .moreinfo{
 	text-decoration: none;
 	color: #000000;
-	margin-left: 40px;
+	margin-left: 4	0px;
 	
 }
 .moreinfo:hover{
