--- a/src/less/style.less
+++ b/src/less/style.less
@@ -64,3 +64,5 @@
 @import "../blocks/page-footer/page-footer.less";
 @import "../blocks/rooms-promo/rooms-promo.less";
 @import "../blocks/rooms/rooms.less";
+@import "../blocks/single-room-item/single-room-item.less";
+@import "../blocks/single-room-options/single-room-options.less";
