--- a/src/less/style.less
+++ b/src/less/style.less
@@ -66,3 +66,6 @@
 @import "../blocks/rooms/rooms.less";
 @import "../blocks/single-room-item/single-room-item.less";
 @import "../blocks/single-room-options/single-room-options.less";
+@import "../blocks/book-top/book-top.less";
+@import '../blocks/book-form/book-form.less';
+@import '../blocks/btn.less';
