--- a/src/blocks/page-header/page-header.less
+++ b/src/blocks/page-header/page-header.less
@@ -30,3 +30,19 @@
 	 }
 }
 
+.main-nav__menu-toggler {
+    text-decoration: none;
+    display: flex;
+    cursor: pointer;
+    width: 28px;
+    min-height: 20px;
+    flex-direction: column;
+
+    span {
+      width: 28px;
+      height: 4px;
+      background-color: black;
+      margin-bottom: 4px;
+      display:block;
+    }
+}
