--- a/src/blocks/feedbacks/feedbacks.less
+++ b/src/blocks/feedbacks/feedbacks.less
@@ -1,6 +1,6 @@
 
 .feedbacks{
-	background-image: url(../../img/feedbacks_bg.png);
+	background-image: url(../img/feedbacks_bg.png);
 	background-size: 100% 100%;
 	min-height: 545px;
 	overflow: visible !important;
