--- a/src/blocks/special-offer/special-offer.less
+++ b/src/blocks/special-offer/special-offer.less
@@ -6,7 +6,7 @@
 		padding-bottom: 30px;
 	}
 	&-item{
-		background-image: url(../../img/offersandactions.png);
+		background-image: url(../img/offersandactions.png);
 		background-size: 100% 100%;
 		min-height: 340px;
 		position: relative;
