--- a/src/blocks/geography/geography.less
+++ b/src/blocks/geography/geography.less
@@ -24,7 +24,7 @@
 	}
 	&__bus:after{
 		content: ' ';
-		background-image: url(../img/Bus.png);
+		background-image: url(./img/Bus.png);
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 		position: absolute;
@@ -38,7 +38,7 @@
 	}
 	&__trail:after{
 		content: ' ';
-		background-image: url(../img/Electro.png);
+		background-image: url(./img/Electro.png);
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 		position: absolute;
