--- a/src/blocks/promo-slider/promo_slider.less
+++ b/src/blocks/promo-slider/promo_slider.less
@@ -4,7 +4,7 @@
 	width: 100%;
 
 	&__item{
-		background-image: url(../img/banner-main.png);
+		background-image: url(./img/banner-main.png);
 		width: 100%;
 		height: 428px;
 	}
@@ -50,7 +50,7 @@
 
 .tab-item {
   display: none;
-  background-image: url(../img/health.png);
+  background-image: url(./img/health.png);
   background-size: 100% 100%;
   position: relative;
   margin-left: 13%;
@@ -61,7 +61,7 @@
 }
 
 .health__item-1{
-	background-image: url(../img/swimming.png);
+	background-image: url(./img/swimming.png);
 	background-size: 100% 100%;
 	width: 80px;
 	height: 105px;
@@ -70,7 +70,7 @@
 	margin-top: 0px;
 }
 .health__item-2{
-	background-image: url(../img/football.png);
+	background-image: url(./img/football.png);
 	background-size: 100% 100%;
 	width: 80px;
 	height: 105px;
@@ -79,7 +79,7 @@
 	margin-top: 0px;
 }
 .health__item-3{
-	background-image: url(../img/pool.png);
+	background-image: url(./img/pool.png);
 	background-size: 100% 100%;
 	width: 80px;
 	height: 105px;
@@ -88,7 +88,7 @@
 	margin-top: 0px;
 }
 .health__item-4{
-	background-image: url(../img/spa.png);
+	background-image: url(./img/spa.png);
 	background-size: 100% 100%;
 	width: 80px;
 	height: 105px;
@@ -97,7 +97,7 @@
 	margin-top: 0px;
 }
 .health__item-5{
-	background-image: url(../img/bath.png);
+	background-image: url(./img/bath.png);
 	background-size: 100% 100%;
 	width: 80px;
 	height: 105px;
@@ -106,7 +106,7 @@
 	margin-top: 0px;
 }
 .health__item-6{
-	background-image: url(../img/animation.png);
+	background-image: url(./img/animation.png);
 	background-size: 100% 100%;
 	width: 80px;
 	height: 105px;
