--- a/src/blocks/rooms-promo/rooms-promo.less
+++ b/src/blocks/rooms-promo/rooms-promo.less
@@ -1,5 +1,5 @@
 .rooms-promo{
-	background-image: url(../img/room-list-banner.png);
+	background-image: url(./img/room-list-banner.png);
 	background-size: 100% 100%;
 	&__title{
 		color: #ffffff;
