--- a/src/blocks/book-form/book-form.less
+++ b/src/blocks/book-form/book-form.less
@@ -117,7 +117,7 @@
 			display: block;
 			width: 82px;
 			height: 64px;
-			background: url(./img/icon-hotel.png);
+			background: url(../img/icon-hotel.png);
 			margin: 0 auto;
 			margin-bottom: 15px;
 			opacity: .4;
@@ -129,7 +129,7 @@
 			width: 16px;
 			height: 12px;
 			margin: 0 auto;
-			background: url(./img/icon-check.png);
+			background: url(../img/icon-check.png);
 			opacity: 0;
 			transition: .2s opacity;
 		}
@@ -144,7 +144,7 @@
 			display: block;
 			width: 82px;
 			height: 64px;
-			background: url(./img/icon-cottage.png);
+			background: url(../img/icon-cottage.png);
 			margin: 0 auto;
 			margin-bottom: 15px;
 			opacity: .4;
@@ -156,7 +156,7 @@
 			width: 16px;
 			height: 12px;
 			margin: 0 auto;
-			background: url(./img/icon-check.png);
+			background: url(../img/icon-check.png);
 			opacity: 0;
 			transition: .2s opacity;
 		}
@@ -250,7 +250,7 @@
 				left: 0;
 				top: 50%;
 				transform: translate(0,-50%);
-				background: url(./img/icon-check.png);
+				background: url(../img/icon-check.png);
 				opacity: 0;
 				transition: .2s opacity;
 				@media (min-width: @screen-sm) {
@@ -271,7 +271,7 @@
 					transform: translate(-50%);
 					bottom: -43px;
 					z-index: 1;
-					background: url(./img/location-type-triangle.png);
+					background: url(../img/location-type-triangle.png);
 					display: none;
 				}
 			}
@@ -309,27 +309,27 @@
 		&--icon-area:before {
 			width: 43px;
 			height: 43px;
-			background: url(./img/icon-square.png);
+			background: url(../img/icon-square.png);
 		}
 		&--icon-room:before {
 			width: 27px;
 			height: 43px;
-			background: url(./img/icon-rooms.png);
+			background: url(../img/icon-rooms.png);
 		}
 		&--icon-bed:before {
 			width: 55px;
 			height: 43px;
-			background: url(./img/icon-bed.png);
+			background: url(../img/icon-bed.png);
 		}
 		&--icon-bath:before {
 			width: 52px;
 			height: 28px;
-			background: url(./img/icon-bath.png);
+			background: url(../img/icon-bath.png);
 		}
 		&--icon-wifi:before {
 			width: 50px;
 			height: 42px;
-			background: url(./img/icon-wifi.png);
+			background: url(../img/icon-wifi.png);
 		}
 	}
 
@@ -354,7 +354,7 @@
 			left: 36px;
 			top: 50%;
 			transform: translate(0,-50%);
-			background: url(./img/icon-check.png);
+			background: url(../img/icon-check.png);
 		}
 		input {
 			text-align: center;
@@ -407,7 +407,7 @@
 		input[type=radio] {
 			display: none;
 			&:checked + label:before {
-				background: url(./img/icon-check.png);
+				background: url(../img/icon-check.png);
 			}
 		}
 	}
@@ -426,7 +426,7 @@
 			left: 15px;
 			top: 50%;
 			transform: translate(0,-50%);
-			background: url(./img/empty-check.png);
+			background: url(../img/empty-check.png);
 		}
 		p {
 			@media (min-width: @screen-sm) {
@@ -505,7 +505,7 @@
 			display: inline-block;
 			width: 13px;
 			height: 12px;
-			background: url(./img/error-notify.png);
+			background: url(../img/error-notify.png);
 			margin-right: 5px;
 		}
 		b {
