--- a/src/blocks/btn.less
+++ b/src/blocks/btn.less
@@ -19,7 +19,7 @@
 		display: inline-block;
 		width: 15px;
 		height: 16px;
-		background: url(./img/icon-calendar.png);
+		background: url(../img/icon-calendar.png);
 		margin-right: 9px;
 		position: relative;
 		top: 2px;
