--- a/src/blocks/offer-choice/offer-choice.less
+++ b/src/blocks/offer-choice/offer-choice.less
@@ -1,5 +1,5 @@
 .offer-choice{
-	background-image: url(./img/choice_bg.png);
+	background-image: url(../img/choice_bg.png);
 	background-size: 100% 100%;
 
 	&__main-title{
