--- a/src/blocks/single-room-item/single-room-item.less
+++ b/src/blocks/single-room-item/single-room-item.less
@@ -6,7 +6,45 @@
 
 	}
 	&__photo{
+		display: none;
+	}
+	&__list-left{
+		display: inline-block;
+		float: left;
+		margin-right: 40px;
+	}
+	&__list-right{
+		display: inline-block;
+		
+	}
+	&__list{
+		list-style-type: none;
+		padding-left: 0;
+	}
+	&__list li::before{
+		content: '>';
+		color: #ff7435;
+	}
+	&__confirm{
+		text-align: center;
+	}
+	&__confirm a{
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+}  
+
+@media (min-width: @screen-lg){
+	.single-room-item{
+	&__price{
+		color: #ff7435;
+	}
+	&__about{
+
+	}
+	&__photo{
 		margin-top: 30px;
+		display: inline-block;
 	}
 	&__list-left{
 		display: inline-block;
@@ -32,3 +70,7 @@
 		margin-bottom: 10px;
 	}
 }  
+.owl-mobile{
+	display: none;
+}
+}
