--- a/src/blocks/single-room-options/single-room-options.less
+++ b/src/blocks/single-room-options/single-room-options.less
@@ -10,6 +10,7 @@
 	}
 }
 .standart-room{
+	margin-left: 20px;
 	text-align: center;
 	margin-top: 40px;
 	margin-bottom: 40px;
@@ -18,6 +19,61 @@
 		padding-right: 0px;
 }
 .standart-plus-room{
+	display: none;
+	text-align: center;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	background-color: #fff;
+	padding-left: 0px;
+		padding-right: 0px;
+}
+.lux-room{
+	margin-left: 20px;
+	text-align: center;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	background-color: #fff;
+	padding-left: 0px;
+		padding-right: 0px;
+}
+.single-room-photo{
+	width: 100%;
+}
+.single-room-options a{
+	text-decoration: none;
+	color: #000000;
+}
+.single-room-options a::hover{
+	text-decoration: none;
+	color: #000000;
+}
+@media (min-width: @screen-sm){
+	.standart-room{
+		margin-right: 20px;
+	}
+}
+@media (min-width: @screen-lg){
+	.single-room-options{
+	background-color: #f6f6f6;
+	margin-top: 40px;
+
+	&__item{
+		display: inline-block;
+		
+		background-color: #ffffff;
+
+	}
+}
+.standart-room{
+	text-align: center;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	background-color: #fff;
+	padding-left: 0px;
+		padding-right: 0px;
+}
+.standart-plus-room{
+	display: inline-block;
 	text-align: center;
 	margin-top: 40px;
 	margin-bottom: 40px;
@@ -43,4 +99,5 @@
 .single-room-options a::hover{
 	text-decoration: none;
 	color: #000000;
+}
 }
