--- a/src/blocks/geography/geography.less
+++ b/src/blocks/geography/geography.less
@@ -1,4 +1,5 @@
 .geography{
+	text-align: center;
 	&-map{
 		&__title{
 			text-align: center;
@@ -11,16 +12,19 @@
 	&-transport{
 &__bus-list{
 		list-style-type: none;
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 	&__bus{
-		
-		
-		margin-left: 40%;
+		text-align: center;			
 
 	}
 	&__bus-block{
 		margin-top: 60px;
 		position: relative;	
+		display: block;
+		padding-left: 25px;
+		padding-right: 25px;
 	}
 	&__bus:after{
 		content: ' ';
@@ -30,10 +34,117 @@
 		position: absolute;
 		width: 50px;
 		height: 30px;	
-		top: -25%;
-		left: 45%;
+		top: -18%;
+		left: 42%;
 	}
 	&__trail{
+		
+		display: block;
+	}
+	&__trail:after{
+		content: ' ';
+		background-image: url(../img/Electro.png);
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		position: absolute;
+		width: 60px;
+		height: 30px;	
+		top: -40%;
+		left: 40%;
+	}
+	}
+}
+@media (min-width: @screen-sm){
+	.geography{
+	text-align: center;
+	&-map{
+		&__title{
+			text-align: center;
+			font-size: 30px;
+			margin-top: 70px;
+			margin-bottom: 35px;
+			font-weight: bold;
+		}
+	}
+	&-transport{
+&__bus-list{
+		list-style-type: none;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	&__bus{
+		text-align: center;			
+
+	}
+	&__bus-block{
+		margin-top: 60px;
+		position: relative;	
+		display: block;
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+	&__bus:after{
+		content: ' ';
+		background-image: url(../img/Bus.png);
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		position: absolute;
+		width: 50px;
+		height: 30px;	
+		top: -35%;
+		left: 47%;
+	}
+	&__trail{
+		
+		display: block;
+	}
+	&__trail:after{
+		content: ' ';
+		background-image: url(../img/Electro.png);
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		position: absolute;
+		width: 60px;
+		height: 30px;	
+		top: -55%;
+		left: 47%;
+	}
+	}
+}
+	}
+@media (min-width: @screen-lg){
+	.geography{
+		&-transport{
+&__bus-list{
+		list-style-type: none;
+	}
+	&__bus{
+		display: block;
+		margin: 0 auto;
+		
+
+	}
+	&__bus-block{
+		margin-top: 60px;
+		position: relative;	
+		padding-left: 0;
+		padding-right: 0;
+		text-align: left;
+	}
+	&__bus:after{
+		content: ' ';
+		background-image: url(../img/Bus.png);
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		position: absolute;
+		width: 50px;
+		height: 30px;	
+		top: -23%;
+		left: 44%;
+	}
+	&__trail{
+		display: block;
+		margin: 0 auto;
 		margin-left: 25%;
 	}
 	&__trail:after{
@@ -44,8 +155,9 @@
 		position: absolute;
 		width: 60px;
 		height: 30px;	
-		top: -45%;
-		left: 33%;
+		top: -42%;
+		left: 32%;
+	}
 	}
 	}
 }
