--- a/src/blocks/offer-choice/offer-choice.less
+++ b/src/blocks/offer-choice/offer-choice.less
@@ -41,3 +41,97 @@
 .offer-choice a:hover{
 	color: #000000;
 }
+
+
+@media (min-width: @screen-lg){
+	.offer-choice{
+	background-image: url(../img/choice_bg.png);
+	background-size: 100% 100%;
+
+	&__main-title{
+		color: #ffffff;
+		font-size: 30px;
+		margin-top: 50px;
+		margin-bottom: 40px;
+	}
+
+	&__item{
+		background-color: #ffffff;
+		text-align: center;
+		padding-left: 0px;
+		padding-right: 0px;
+		min-height: 340px;
+		margin-bottom: 50px;
+	}
+	&__item-img{
+		width: 100%;
+		
+	}
+	&__item-link{
+		
+		color: #000000;
+	}
+	&__title{
+		margin-top: 30px;
+		font-size: 30px;
+	}
+	&__price{
+		color: #ff7435;
+		font-weight: bold;
+		
+	}
+}
+.offer-choice a{
+	text-decoration: none;
+}
+.offer-choice a:hover{
+	color: #000000;
+}
+
+}
+@media (min-width: @screen-sm){
+	.offer-choice{
+	background-image: url(../img/choice_bg.png);
+	background-size: 100% 100%;
+
+	&__main-title{
+		color: #ffffff;
+		font-size: 30px;
+		margin-top: 50px;
+		margin-bottom: 40px;
+	}
+
+	&__item{
+		background-color: #ffffff;
+		text-align: center;
+		padding-left: 0px;
+		padding-right: 0px;
+		min-height: 340px;
+		margin-bottom: 50px;
+		margin-left: 40px;
+	}
+	&__item-img{
+		width: 100%;
+		
+	}
+	&__item-link{
+		
+		color: #000000;
+	}
+	&__title{
+		margin-top: 30px;
+		font-size: 30px;
+	}
+	&__price{
+		color: #ff7435;
+		font-weight: bold;
+		
+	}
+}
+.offer-choice a{
+	text-decoration: none;
+}
+.offer-choice a:hover{
+	color: #000000;
+}
+	}
