--- a/src/blocks/page-footer/page-footer.less
+++ b/src/blocks/page-footer/page-footer.less
@@ -4,10 +4,12 @@
 	vertical-align: middle;
 	&__adress{
 		margin-top: 15px;
+		display: none;
 	}
 	&__phone{
 		text-align: left;
 		margin-top: 15px;
+		display: none;
 	}
 	&__links .site-logo{
 		padding-bottom: 15px;
@@ -15,4 +17,26 @@
 }
 .page-footer a{
 	margin-top: 10px;
+}
+@media (min-width: @screen-lg){
+	.page-footer{
+	min-height: 130px;
+	padding-top: 25px;
+	vertical-align: middle;
+	&__adress{
+		margin-top: 15px;
+		display: inline-block;
+	}
+	&__phone{
+		text-align: left;
+		margin-top: 15px;
+		display: inline-block;
+	}
+	&__links .site-logo{
+		padding-bottom: 15px;
+	}
+}
+.page-footer a{
+	margin-top: 10px;
+}
 }
