--- a/src/blocks/rooms-promo/rooms-promo.less
+++ b/src/blocks/rooms-promo/rooms-promo.less
@@ -1,4 +1,22 @@
 .rooms-promo{
+	background-image: url(../img/room-list-banner-320.png);
+	background-size: 100% 100%;
+	min-height: 200px;
+	&__title{
+		color: #ffffff;
+		font-size: 36px;
+		padding-top: 50px;
+	}
+	&__text{
+		display: none;
+		color: #ffffff;
+		font-size: 18px;
+		padding-top: 30px;
+		padding-bottom: 50px;
+	}
+}
+@media (min-width: @screen-sm){
+	.rooms-promo{
 	background-image: url(../img/room-list-banner.png);
 	background-size: 100% 100%;
 	&__title{
@@ -7,9 +25,29 @@
 		padding-top: 50px;
 	}
 	&__text{
+		display: block;
 		color: #ffffff;
 		font-size: 18px;
 		padding-top: 30px;
 		padding-bottom: 50px;
 	}
+}
+}
+@media (min-width: @screen-lg){
+	.rooms-promo{
+	background-image: url(../img/room-list-banner.png);
+	background-size: 100% 100%;
+	&__title{
+		color: #ffffff;
+		font-size: 36px;
+		padding-top: 50px;
+	}
+	&__text{
+		display: block;
+		color: #ffffff;
+		font-size: 18px;
+		padding-top: 30px;
+		padding-bottom: 50px;
+	}
+}
 }
