--- a/src/blocks/rooms/rooms.less
+++ b/src/blocks/rooms/rooms.less
@@ -3,6 +3,72 @@
 	background-color: #fafafa;
 	margin-bottom: 40px;
 	margin-top: 40px;	
+	padding-left: 0;
+	padding-right: 0;
+
+		&__title{
+			font-size: 26px;
+			padding-top: 45px;
+		}
+		&__price{
+			color: #ff7435;
+		}
+		&__price-text{
+			font-size: 16px;
+			font-weight: medium;
+
+		}
+		&__text{
+			padding-top: 35px;
+			margin-bottom: 35px;
+		}
+		&__left-side{
+			
+			display: block;
+			padding: 0;
+			background-color: #fafafa;
+			vertical-align: middle;
+		}
+		&__right-side{
+			
+			display: none;
+			vertical-align: middle;
+		}
+		&__img{
+			width: 100%;
+			height: 100%;
+		}
+		&__top{
+			margin-top: 45px;
+		}
+	}
+}
+.no-padding{
+	padding-left: 0;
+	padding-right: 0;
+}
+.rooms-item__img-mobile{
+			width: 100%;
+		}
+.moreinfo{
+	text-decoration: none;
+	color: #000000;
+	margin-left: 4	0px;
+	display: block;
+	padding-top: 10px;
+	margin-bottom: 20px;
+}
+.moreinfo:hover{
+	text-decoration: none;
+	color: #000000;
+	border-bottom: 2px dotted #000;
+}
+@media (min-width: @screen-lg){
+	.rooms{
+	&-item{
+	background-color: #fafafa;
+	margin-bottom: 40px;
+	margin-top: 40px;	
 
 		&__title{
 			font-size: 26px;
@@ -36,19 +102,98 @@
 			width: 100%;
 			height: 100%;
 		}
+		
 		&__top{
 			margin-top: 45px;
 		}
 	}
 }
+.no-padding{
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.rooms-item__img-mobile{
+			display: none;
+		}
 .moreinfo{
 	text-decoration: none;
 	color: #000000;
 	margin-left: 4	0px;
-	
+	display: inline-block;
+	padding-top: 0px;
 }
 .moreinfo:hover{
 	text-decoration: none;
 	color: #000000;
 	border-bottom: 2px dotted #000;
+}
+}
+@media (min-width: @screen-sm){
+	.rooms{
+	&-item{
+	background-color: #fafafa;
+	margin-bottom: 40px;
+	margin-top: 40px;
+	
+
+		&__title{
+			font-size: 26px;
+			padding-top: 45px;
+		}
+		&__price{
+			color: #ff7435;
+		}
+		&__price-text{
+			font-size: 16px;
+			font-weight: medium;
+
+		}
+		&__text{
+			padding-top: 35px;
+			margin-bottom: 35px;
+		}
+		&__left-side{
+			width: 100%;
+			display: inline-block;
+			padding: 0 20px 0 20px;
+			background-color: #fafafa;
+			vertical-align: middle;
+		}
+		&__right-side{
+			width: 48%;
+			display: none;
+			vertical-align: middle;
+		}
+		&__img{
+			width: 100%;
+			height: 100%;
+		}
+		
+		&__top{
+			margin-top: 45px;
+		}
+	}
+}
+.no-padding{
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.rooms-item__img-mobile{
+			display: block;
+			height: 306px;
+			width: 100%;
+		}
+.moreinfo{
+	text-decoration: none;
+	color: #000000;
+	margin-left: 15px;
+	display: inline-block;
+	padding-top: 0px;
+	margin-bottom: 20px;
+}
+.moreinfo:hover{
+	text-decoration: none;
+	color: #000000;
+	border-bottom: 2px dotted #000;
+}
 }
